--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+::-webkit-scrollbar{
+  width: 9px;
+  background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  background-color: #4BB96A;
+}
